k8s/flask-deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text-app
  labels:
    app: text-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: text-app
  template:
    metadata:
      labels:
        app: text-app
    spec:
      containers:
      - name: web-app
        image: text-app:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
